# notes

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  directoryRunner.cpp  directoryRunner.h  main.cpp
